[package]
name = "exit_on_close"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
git = "https://github.com/iced-rs/iced.git"
features = [
    "tokio",
    "canvas",
    "debug",
    "lazy",
    "advanced",
    "svg",
    "wgpu",
    "qr_code",
]
branch = "master"
